# gg-transfer

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: python-package.yml
ggtransfer/: __init__.py  __main__.py  _exceptions.py  _receive.py  _send.py
src/ggtransfer/: __init__.py  _exceptions.py  _receive.py  _send.py
test/: test_send_msg.py
tests/: test_send_msg.py
